Update to the project config